# vanilla-drivers-utility

./: .gitignore  README.md  meson.build  meson_options.txt  org.vanillaos.DriversManager.json
data/: meson.build  org.vanillaos.DriversManager.appdata.xml.in  org.vanillaos.DriversManager.desktop.in  org.vanillaos.DriversManager.gschema.xml  org.vanillaos.DriversUtility.appdata.xml.in  org.vanillaos.DriversUtility.desktop.in  org.vanillaos.DriversUtility.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  files
po/: LINGUAS  POTFILES  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  drivers_utility.pot  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+103 more)
src/: drivers-utility.gresource.xml  driversmanager.gresource.xml  driversmanager.in  main.py  meson.build  window.py  window.ui
vanilla_drivers_utility/: drivers-utility.gresource.xml  main.py  meson.build  vanilla-drivers-utility.in
vanilla_drivers_utility/gtk/: driver.ui  window-installation.ui  window-main.ui  window.ui
vanilla_drivers_utility/utils/: meson.build  wrapper.py
vanilla_drivers_utility/widgets/: driver.py  meson.build
vanilla_drivers_utility/windows/: installation_window.py  main_window.py  meson.build
